# sorting-algorithms

./: .gitignore  CMakeLists.txt  README.md
include/: SortingAlgorithms.hpp  TerminalDisplay.hpp  Time.hpp  algo.hpp
src/: SortingAlgorithms.cpp  TerminalDisplay.cpp  Time.cpp  algo.cpp  main.cpp
